fixed overflow for detailMonitor, changing margin-bottom and alterting body background-color

--- a/static/style.css
+++ b/static/style.css
@@ -10,7 +10,7 @@ body {
   height: 100%;
   width: 100%;
   position: absolute;
-  background-color: blue;
+  background-color: #1dd1a1ff;
 }
 
 #navigation {
@@ -60,7 +60,7 @@ body {
     height: calc(100% - 80px);
     width: 100%;
     background-color: #1dd1a1ff;
-    overflow: hidden;
+    /*overflow: hidden;*/
     font-family: 'Fredoka One';
 }
 
@@ -205,6 +205,7 @@ body {
     width: calc(100% - 44px); /*Accounts for border size as well*/
     margin-left: 16px;
     margin-top: 4px;
+    margin-bottom:16px;
     background-color: #18b389ff;
     border-radius: 8px;
     border: 3px solid #576574;
